CHANGELOG
---------

- Add (apt-mark showauto), Jenkins shut up
  [svx]